--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "proyecto de api hecha en typescript para proceso de selección SII Group - Banco Estado",
   "main": "index.js",
   "scripts": {
+    "start": "node ./build/index.js",
     "dev": "ts-node-dev ./src/index.ts",
-    "tsc": "tsc",
-    "test": "jest"
+    "build": "tsc",
+    "test": "jest",
+    "dist": "sh ./scripts/dist.sh"
   },
   "author": "Alonso Cabret",
   "license": "MIT",
