--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dummy-array-api",
   "version": "1.0.0",
-  "description": "proyecto de api hecha en typescript para proceso de selección SII Group - Banco Estado",
+  "description": "proyecto de api hecha en typescript para proceso de selección",
   "main": "index.js",
   "scripts": {
     "start": "node ./build/index.js",
